client/src/pages/auth.css
@media screen and (max-width: 420px) {
  .auth-container-1 {
    margin-bottom: 2rem !important;
  }

  input::placeholder {
    font-size: 1.1rem !important;
  }

  #submit {
    font-size: 1.1rem !important;
  }
}

.auth {
  background-color: #c95152;
  position: relative !important;
  display: flex !important;
  flex-direction: row !important;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.auth-container-1,
.auth-container-2 {
  background-color: #c95152 !important;
  display: flex !important;
  flex-direction: row !important;
  /* flex: 1; */
  justify-content: center;
  align-items: center;
  padding: 20px;
  background-color: white;
  border-radius: 5px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  margin: 20px;
  width: 380px;
}

.auth-title {
  color: #fdbda2;
  border-top: 1px solid #fdbda2;
}

.button-holder {
  text-align: center;
}

#username,
#password {
  border: 1px solid rgba(253, 189, 162, 0.5);
  color: rgba(253, 189, 162, 0.5);
  background: transparent;
}

#username:focus,
#password:focus {
  color: #fdbda2;
  outline: none;
}

#submit {
  cursor: pointer;
  margin-top: 35px;
  margin-bottom: 25px;
  color: #fdbda2;
  font-size: 15px;
  border-bottom: 1px solid #fdbda2;
  padding-bottom: 5px;
  z-index: 0;
}

#submit:hover {
  color: #fcdccf;
  border-bottom: 1px solid #fcdccf;
}

form {
  width: 52%;
}

.form-group {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
}

input {
  /*margin-top: 8px;*/
  height: 30px;
  border-radius: 38px;
  -webkit-border-radius: 38px;
  -moz-border-radius: 38px;
  -ms-border-radius: 38px;
  -o-border-radius: 38px;
  -webkit-border-radius: 10px;
}

input::placeholder {
  color: rgba(253, 189, 162, 0.5);
}

.arrow:before {
  content: "→";
  position: absolute;
  color: #fdbda2;
  left: 83%;
  opacity: 0;
  -webkit-transition: all 250ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.arrow:hover:before {
  left: 84%;
  opacity: 1;
  color: #fcdccf;
  top: -2%;
}

.arrow:hover {
  width: 140px;
  color: #fcdccf;
}

